keycloak/templates/authpolicy.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: defaultAllowAll
  namespace: keycloak
spec:
  rules:
    - {}
